# uni-search

./: CMakeLists.txt  README.md  database.db  main.cpp
data/: CSET201 - IMS.txt  CSET202 - C++.txt  CSET203 - Micro.txt  CSET205 - Software.txt  CSET214 - Data Science.txt  CSET240 - Probability.txt
include/: auth.h  dashboard.h  trie.h
src/: auth.cpp  dashboard.cpp  trie.cpp
